[package]
name = "keybroker"
author = ["The VirTEE Authors <virtee-security@redhat.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
