[package]
name = "keybroker"
author = ["The VirTEE Authors <virtee-security@redhat.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
curl = "0.4.46"
hex = "0.4.3"
kbs-types = "0.5.3"
lazy_static = "1.4.0"
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sev = { version = "3.1.1", default-features = false, features = ["snp", "openssl"] }
uuid = { version = "1.7.0", features = ["v4"] }
