[package]
name = "rvp_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["blocking", "cookies", "json"] }
serde_json = "1.0.108"
structopt = "0.3.26"
